# subspace-tauri

./: README.md  package-lock.json  package.json
src/: App.tsx  Error.ts  index.tsx  reportWebVitals.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: basis_api.rs  main.rs  util.rs
src/api/: Arithmetic.ts  index.ts
src/components/: BinaryOperationPanel.tsx  ButtonPair.tsx  ExternalLink.tsx  MatrixInput.tsx  OperationPanel.tsx  Operator.tsx  OperatorSymbol.tsx  OutputRow.tsx  ScalarInput.tsx  ScalarOperationPanel.tsx  TemporaryDrawer.tsx  index.ts
src/pages/: About.tsx  ArithmeticCalculator.tsx  BinaryCalculator.tsx  Calculator.tsx  ScalarCalculator.tsx  Splash.tsx  index.ts
src/styles/: ArithmeticCalculator.css
src/utils/: Error.ts  Matrix.ts  Reducer.ts  index.ts
