[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1.0.0-beta.0" }

[dependencies]
paste = "1.0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.6"
tauri = { version = "^1.0.0-beta.1", features = ["api-all"] }
basis = { git = "https://github.com/ShaneEverittM/basis-tauri", branch = "sprint3", features = ["serde"] }
thiserror = "1.0.24"
anyhow = "1.0.40"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
